Move jvm/jvmOptions props creation from SourceProject to app packaging