@@ -86,8 +86,8 @@ public class PackageWOApplication {
 		// Write config.txt
 		String configString = Util.readTemplate( "config" );
 		configString = configString.replace( "${principalClass}", sourceProject.principalClassName() );
-		configString = configString.replace( "${jvm}", sourceProject.jvm() );
-		configString = configString.replace( "${jvmOptions}", sourceProject.jvmOptions() );
+		configString = configString.replace( "${jvm}", jvm( sourceProject.buildProperties() ) );
+		configString = configString.replace( "${jvmOptions}", jvmOptions( sourceProject.buildProperties() ) );
 		Util.writeStringToPath( configString, woa.woaPath().resolve( "config.txt" ) );
 
 		// Write classpath.txt
@@ -105,6 +105,47 @@ public class PackageWOApplication {
 		Util.makeUserExecutable( launchScriptPath );
 
 		return woa;
+	}
+
+	/**
+	 * @return The JVM executable to use for launching the application
+	 */
+	private static String jvm( final BuildProperties buildProperties ) {
+		final String jvm = buildProperties.jvm();
+		return jvm != null ? jvm : "java";
+	}
+
+	/**
+	 * @return String of arguments to pass on to the generated launch scripts' JVM
+	 *
+	 * CHECKME:
+	 * We currently assume the app will run on JDK >= 17 and add the parameters required for that to work.
+	 * It could be nicer to check the targeted java version and add parameters as required.
+	 * Or not do anything at all and make the user handle this in build.properties? Explicit good, magic bad.
+	 * // Hugi 2022-09-28
+	 */
+	private static String jvmOptions( final BuildProperties buildProperties ) {
+		String jvmOptions = buildProperties.jvmOptions();
+
+		if( jvmOptions == null ) {
+			jvmOptions = "";
+		}
+
+		final List<String> requiredParameters = List.of(
+				"--add-exports java.base/sun.security.action=ALL-UNNAMED", // WO won't run without this one (required by NSTimezone)
+				"--add-opens java.base/java.util=ALL-UNNAMED", // And we need this one to (at least) access the private List implementations created all over the place by more recent JDKs
+				"--add-opens java.base/java.time=ALL-UNNAMED", // For accessing methods on java.time related objects (like LocalDate.year)
+				"--add-opens java.base/java.lang=ALL-UNNAMED" // Various classes in the lang package
+		);
+
+		// We add the "forced" parameters only if they aren't already present in build.properties
+		for( final String requiredParameter : requiredParameters ) {
+			if( !jvmOptions.contains( requiredParameter ) ) {
+				jvmOptions = jvmOptions + " " + requiredParameter;
+			}
+		}
+
+		return jvmOptions;
 	}
 
 	/**
